<resources>
    <string name="app_name">BLEDataGlancer</string>

    <!-- MainActivity トースト用 -->
    <string name="ble_is_not_supported">BLE is not supported</string>
    <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
    <string name="bluetooth_is_not_working">Bluetooth is not working.</string>

    <!-- MainActivity メニュー用 -->
    <string name="search">Search</string>

    <!-- MainActivity ラベル用 -->
    <string name="device_name">Device Name : </string>
    <string name="device_address">Device Address : </string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="value">温度 : </string>
    <string name="recip">レシピ</string>
    <string name="next">次へ</string>
    <string name="main">メイン画面へ</string>
    <string name="guzai">投入した</string>

    <!-- DeviceListActivity トースト用 -->
    <string name="unknown_device">Unknown device</string>

    <!-- DeviceListActivity メニュー用 -->
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
</resources>
